[package]
name = "tree-edit-distance"
version = "0.3.0"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
edition = "2021"
description = "Find the lowest cost sequence of edits between two trees"
repository = "https://github.com/brunocodutra/tree-edit-distance.git"
license = "MIT"
readme = "README.md"
keywords = ["diff", "tree", "distance", "levenshtein", "lcs"]
categories = ["algorithms"]

[dependencies]
arrayvec = "0.7.2"
derive_more = "0.99.17"
itertools = "0.10.3"
pathfinding = "3.0.9"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.3.5"
json = "0.12.4"
proptest = "1.0.0"
test-strategy = "0.1.2"

[lib]
bench = false

[[bench]]
name = "diff"
harness = false
