[package]
name = "tree-edit-distance"
version = "0.4.0"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
edition = "2021"
description = "Find the lowest cost sequence of edits between two trees"
repository = "https://github.com/brunocodutra/tree-edit-distance.git"
license = "MIT"
readme = "README.md"
keywords = ["diff", "tree", "distance", "levenshtein", "lcs"]
categories = ["algorithms"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false, features = ["std"] }
derive_more = { version = "1.0.0", default-features = false, features = ["add", "from"] }
itertools = { version = "0.13.0", default-features = false, features = ["use_std"] }
pathfinding = { version = "4.0.0", default-features = false }

[dev-dependencies]
assert_matches = { version = "1.5.0", default-features = false }
criterion = { version = "0.5.1", default-features = false, features = ["rayon"] }
proptest = { version = "1.0.0", default-features = false, features = ["std"] }
serde_json = { version = "1.0.85", default-features = false, features = ["std"] }
test-strategy = { version = "0.4.0", default-features = false }

[lib]
bench = false

[[bench]]
name = "diff"
harness = false
